# newstock-alert-bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  healthcheck.py  main.py  production_checks.py
app/bot/: factory.py
app/bot/lifecycle/: __init__.py  telegram.py
app/bot/middlewares/: __init__.py  database.py  logging.py
app/bot/routers/: __init__.py  add_product.py  check_product.py  commands.py  list_products.py  remove_product.py
app/core/: config.py
app/database/: connection.py  models.py  repositories.py
app/database/migrations/: env.py
app/domain/entities/: __init__.py  models.py
app/domain/repositories/: __init__.py  protocols.py
app/integrations/marketplaces/: __init__.py  base.py
app/observability/: logging.py
app/services/browser/: session.py
app/services/notifications/: alerts.py  notifier.py  telegram.py
app/services/products/: add_product.py  check_product.py  list_products.py  remove_product.py
app/services/scheduler/: jobs.py  runner.py
scripts/: backup.sh  deploy.sh  logs.sh  restart.sh  restore.sh  stop.sh  update.sh
src/newstock_alert_bot/marketplaces/: __init__.py  base.py  models.py
tests/: test_add_product_workflow.py  test_amazon_marketplace_adapter.py  test_architecture.py  test_background_stock_scheduler.py  test_check_product_workflow.py  test_database_layer.py  test_list_products_workflow.py  test_marketplace_contracts.py  test_remove_product_workflow.py  test_telegram_alert_service.py
(+7 files in other folders)
