[project]
name = "newstock-alert-bot"
version = "0.1.0"
description = "Production-ready architecture for a Telegram stock alert bot targeting Indian shopping websites."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.6,<4.0",
    "aiosqlite>=0.20,<1.0",
    "apscheduler>=3.10,<4.0",
    "playwright>=1.44,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "ANN"]
ignore = ["ANN101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
